--- a/frontend/src/css/foundation/common.css
+++ b/frontend/src/css/foundation/common.css
@@ -18,3 +18,16 @@
     font-size: 16px;
     font-family: 'Roboto',sans-serif;
 }
+
+
+.container{
+    display: flex;
+    width: 100%;
+    height: 95vh;
+    border: 1px solid black;
+    background-color: red;
+    gap: 1rem;
+    padding: 1rem 2rem;
+    box-sizing: border-box;
+    background-color: var(--color-white);
+}
