--- a/frontend/src/css/frames/nav/nav.css
+++ b/frontend/src/css/frames/nav/nav.css
@@ -1,7 +1,7 @@
 nav{
     width: 100%;
     padding: 0.7rem 0;
-    height: 100%;
+    /* height: 100%; */
     background-color: chocolate;
 }
 .nav-container {
