--- a/frontend/src/css/frames/main/main-left.css
+++ b/frontend/src/css/frames/main/main-left.css
@@ -1,5 +1,5 @@
 .container .main-left{
-    border: 1px solid white;
+    /* border: 1px solid white; */
     width: 20%;
     display: flex;
     flex-direction: column;
