--- a/frontend/src/css/frames/main/main-left.css
+++ b/frontend/src/css/frames/main/main-left.css
@@ -3,7 +3,7 @@
     width: 20%;
     display: flex;
     flex-direction: column;
-    flex: 1;
+    margin: 1rem 0;
 }
 .main-left .profile{
     background-color: var(--color-bgcolor);
