main mid completed

--- a/frontend/src/css/frames/main/main-mid.css
+++ b/frontend/src/css/frames/main/main-mid.css
@@ -115,6 +115,9 @@
     position: absolute;
     left: 1rem;
 }
+.main-mid-thought-wrapper>input:focus{
+    outline: 0;
+} 
 
 .main-mid-thought-wrapper> :last-child {
     position: absolute;
