main-right added

--- a/frontend/index.css
+++ b/frontend/index.css
@@ -15,6 +15,7 @@
 @import './src/css/frames/main/main-left.css';
 @import './src/css/frames/main/main-mid.css';
 @import './src/css/frames/main/main-right.css';
+@import './src/css/frames/main/main.css';
 @import './src/css/frames/media/media.css';
 
 
