--- a/frontend/src/css/frames/main/main-left.css
+++ b/frontend/src/css/frames/main/main-left.css
@@ -1,6 +1,6 @@
 .container .main-left{
     /* border: 1px solid white; */
-    width: 20%;
+    flex: 1;
     display: flex;
     flex-direction: column;
     margin: 1rem 0;
