--- a/frontend/src/css/frames/main/main-right.css
+++ b/frontend/src/css/frames/main/main-right.css
@@ -67,13 +67,13 @@
     top: 2.5rem;
 } */
 
-/* .friend-checkbox h3 {
+.friend-checkbox h3 {
     font-size: medium;
     position: relative;
     cursor: pointer;
-} */
+}
 
-/* .friend-checkbox>h3:first-child {
+.friend-checkbox>h3:first-child {
     margin-left: var(--mainright-margin);
 }
 
@@ -93,9 +93,9 @@
     border-radius: 0.5rem;
     height: 0.5rem;
     top: 1.5rem;
-} */
+}
 
-/* .main-right>.main-right-wrapper>.profile_override {
+.main-right>.main-right-wrapper>.profile_override {
     margin: 0.5rem 0;
     padding: 0.5rem;
-} */
+}
